<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="23.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="15.0dip" android:text="@string/holidayspromotion_title_wallet" style="@style/Aptoide.TextView.Regular.L.BlackAlpha" />
    <TextView android:layout_width="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="15.0dip" android:text="@string/holidayspromotion_message_wallet" style="@style/Aptoide.TextView.Regular.M.BlackAlpha" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="8.0dip">
        <EditText android:textColor="?textColorBlackAlpha" android:ellipsize="middle" android:id="@id/wallet_edit" android:background="?walletEditBackgroundDrawable" android:paddingLeft="28.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="56.0dip" android:hint="@string/holidayspromotion_short_wallet_field" android:scrollHorizontally="true" android:singleLine="true" android:inputType="text" />
        <ImageView android:layout_gravity="center_vertical" android:id="@id/wallet_message_icon" android:visibility="gone" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginLeft="8.0dip" android:src="@drawable/ic_check_green" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:id="@id/wallet_error_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/wallet_error_icon" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginRight="4.0dip" android:src="@drawable/ic_info_red" />
        <TextView android:layout_gravity="center_vertical" android:id="@id/wallet_error_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/holidayspromotion_short_wallet_invalid" style="@style/Aptoide.TextView.Medium.XS.BlackAlpha" />
    </LinearLayout>
    <android.widget.Button android:id="@id/get_wallet_button" android:layout_width="fill_parent" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="33.0dip" android:text="@string/holidayspromotion_button_wallet_get" style="@style/Aptoide.Button" />
    <LinearLayout android:layout_gravity="end" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip">
        <android.widget.Button android:id="@id/wallet_cancel_button" android:layout_width="wrap_content" android:layout_marginRight="16.0dip" android:text="@string/cancel" style="@style/Aptoide.Button.Flat" />
        <android.widget.Button android:id="@id/wallet_continue_button" android:layout_width="wrap_content" android:text="@string/iab_button_next" style="@style/Aptoide.Button.Flat" />
    </LinearLayout>
</LinearLayout>