<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/grey_900" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textColor="@color/white" android:id="@id/titleTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="20.0dip" android:text="@string/dark_theme_notification_title" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Aptoide.TextView.Medium.M" />
    <TextView android:textColor="@color/white" android:id="@id/descriptionTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/dark_theme_notification_body" app:layout_constraintStart_toStartOf="@id/titleTextView" app:layout_constraintTop_toBottomOf="@id/titleTextView" style="@style/Aptoide.TextView.Regular.XS" />
    <android.widget.Button android:textColor="@color/white" android:id="@id/dismissButton" android:background="@drawable/btn_ghost_theme_dark" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="18.0dip" android:layout_marginRight="12.0dip" android:text="@string/updates_notification_dismiss_button" app:layout_constraintEnd_toStartOf="@id/turnItOnButton" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/descriptionTextView" style="@style/Aptoide.Button.Ghost" />
    <android.widget.Button android:textColor="@color/black" android:id="@id/turnItOnButton" android:background="@drawable/aptoide_rounded_dark" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="16.0dip" android:text="@string/dark_theme_notification_button" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/dismissButton" app:layout_constraintTop_toTopOf="@id/dismissButton" style="@style/Aptoide.Button.Alternative" />
    <TextView android:textColor="@color/grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_marginBottom="18.0dip" android:text="@string/dark_theme_notification_disclaimer" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/dismissButton" app:layout_constraintVertical_bias="0.0" style="@style/Aptoide.TextView.Medium.XXS" />
</androidx.constraintlayout.widget.ConstraintLayout>