<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center_vertical" android:paddingLeft="13.299988dip" android:paddingRight="17.299988dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/additional_information" style="@style/Aptoide.TextView.Regular.M.BlackAlpha" />
    <LinearLayout android:orientation="vertical" android:paddingLeft="13.299988dip" android:paddingRight="17.299988dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:id="@id/website_label" android:padding="@dimen/appview_developer_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="22.0dip" android:layout_height="22.0dip" android:src="@drawable/ic_map_appview" />
            <TextView android:textSize="14.0sp" android:textColor="?android:textColorSecondary" android:gravity="center_vertical" android:id="@id/website_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:text="@string/appview_short_developer_website" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/email_label" android:padding="@dimen/appview_developer_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="22.0dip" android:layout_height="22.0dip" android:src="@drawable/ic_mail_appview" />
            <TextView android:textSize="14.0sp" android:textColor="?android:textColorSecondary" android:gravity="center_vertical" android:id="@id/email_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:text="@string/appview_short_developer_email" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/privacy_policy_label" android:padding="@dimen/appview_developer_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="22.0dip" android:layout_height="22.0dip" android:src="@drawable/ic_locked_appview" />
            <TextView android:textSize="14.0sp" android:textColor="?android:textColorSecondary" android:gravity="center_vertical" android:id="@id/privacy_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:text="@string/appview_short_developer_privacy_policy" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/permissions_label" android:padding="@dimen/appview_developer_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="22.0dip" android:layout_height="22.0dip" android:src="@drawable/ic_permissions_appview" />
            <TextView android:textSize="14.0sp" android:textColor="?android:textColorSecondary" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:text="@string/permissions" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>