<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="7.0dip">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="15.299988sp" android:textColor="?colorPrimaryDark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="17.0dip" android:text="@string/remote_install_title" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:textIsSelectable="false" />
        <ProgressBar android:id="@id/progressBar" android:visibility="visible" android:layout_width="27.0dip" android:layout_height="27.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="16.0dip" android:indeterminate="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="?android:progressBarStyleSmall" />
        <ImageButton android:id="@id/refreshButton" android:background="@null" android:padding="0.0dip" android:visibility="visible" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="16.5dip" android:src="@drawable/ic_refresh" android:scaleType="fitCenter" android:adjustViewBounds="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/remote_install_retry" />
    </RelativeLayout>
    <View android:background="?separatorColor" android:layout_width="wrap_content" android:layout_height="0.30000007dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:alpha="0.15" />
    <LinearLayout android:orientation="vertical" android:id="@id/listLayout" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ListView android:id="@id/listView" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="10.0dip" android:layout_weight="0.23" />
        <LinearLayout android:orientation="vertical" android:id="@id/emptyListLayout" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="16.799988sp" android:textColor="#ff999999" android:gravity="center" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginTop="25.0dip" android:layout_marginRight="25.0dip" android:layout_marginBottom="25.0dip" android:text="@string/remote_install_empty_list" />
            <LinearLayout android:orientation="vertical" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="0.30000007dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:alpha="0.15" />
                <TextView android:textSize="12.699982sp" android:textColor="#ff999999" android:gravity="center" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="26.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="26.0dip" android:layout_marginBottom="16.699982dip" android:text="@string/remote_install_tip" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/errorLayout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:orientation="horizontal" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="17.0dip" android:layout_marginBottom="17.0dip">
            <android.widget.Button android:textSize="12.0sp" android:ellipsize="none" android:layout_gravity="center_vertical" android:id="@id/help_btn" android:layout_width="53.69998dip" android:layout_height="25.699982dip" android:layout_marginRight="17.0dip" android:text="@string/remote_install_help" android:layout_alignParentRight="true" style="@style/Aptoide.Button.Alternative" />
            <TextView android:textSize="12.5sp" android:textColor="#ff999999" android:autoLink="web" android:id="@id/no_connection_text" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginRight="60.0dip" android:text="@string/remote_install_nowifi" android:layout_alignRight="@id/help_btn" android:layout_alignParentLeft="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true" style="?android:textAppearanceSmall" />
        </RelativeLayout>
        <View android:background="?separatorColor" android:layout_width="fill_parent" android:layout_height="0.30000007dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:alpha="0.15" />
        <TextView android:textSize="12.699982sp" android:textColor="#ff999999" android:gravity="center_horizontal" android:autoLink="web" android:layout_gravity="center_horizontal" android:id="@id/aptoidetv_installed_text" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="16.199982dip" android:text="@string/remote_install_notinstallated" style="?android:textAppearanceSmall" />
    </LinearLayout>
</LinearLayout>